--- a/config.json
+++ b/config.json
@@ -59,6 +59,12 @@
       "css": "ok",
       "code": 59399,
       "src": "fontawesome"
+    },
+    {
+      "uid": "e99461abfef3923546da8d745372c995",
+      "css": "cog",
+      "code": 59400,
+      "src": "fontawesome"
     }
   ]
 }
